--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,8 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-// Propriedades da lib
+
+# Propriedades da lib
 POM_ARTIFACT_ID=predetect
 VERSION_NAME=1.1.0
 GROUP=danielfilho.ufc.br.com
