--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,10 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.feature'
 
 android {
     compileSdkVersion 28
+
+
+    baseFeature true
 
     defaultConfig {
         minSdkVersion 18
@@ -23,8 +26,8 @@ android {
 }
 
 dependencies {
+    api 'com.android.support:appcompat-v7:28.0.0-rc02'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
