--- a/wifi/build.gradle
+++ b/wifi/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.elvishew:xlog:1.4.1'
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation project(':common')
 
     testImplementation 'junit:junit:4.12'
 }
