--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation project(':common')
-//    implementation project(':wifi')
+    implementation project(':wifi')
     implementation project(':ble')
 }
