--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".WifiActivity" />
+        <!--<activity android:name=".WifiActivity" />-->
 
         <activity android:name=".BLEActivity">
             <intent-filter>
