--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,10 +1,9 @@
-apply plugin: 'com.android.feature'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 28
-
-    baseFeature true
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 14
